css path updated

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Welcome Page</title>
-        <link rel="stylesheet" href="/Users/shaidul/Desktop/Basic of Web Development/Task-a/style.css">
+        <link rel="stylesheet" href="style.css">
 
     </head>
     <body>
