Coulmns width updated

--- a/Task-e/index.html
+++ b/Task-e/index.html
@@ -34,7 +34,7 @@
         </thead>
         <tbody>
           <tr>
-            <td>Course name A</td>
+            <td>Algorithm and Data Structures</td>
             <td>✅</td>
             <td>✅</td>
             <td>❌</td>
@@ -42,7 +42,7 @@
             <td>✅</td>
           </tr>
           <tr>
-            <td>Course name B</td>
+            <td>Algebra</td>
             <td>✅</td>
             <td>✅</td>
             <td>❌</td>
