--- a/Task-f/index.html
+++ b/Task-f/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <!--
-    Author: Ville Heikkiniemi
-    Date: 2025-10-06
+    Author: Md Shaidul Islam
+    Date: 2025-10-29
   -->
 
   <header class="site-header">
@@ -24,8 +24,8 @@
       <!-- Student info -->
       <section class="student-info" aria-label="Student information">
         <h2 class="student-info-title">Information</h2>
-        <p><span class="student-name">Your Name</span></p>
-        <p><span class="student-group">Group number</span></p>
+        <p><span class="student-name">Md Shaidul Islam</span></p>
+        <p><span class="student-group">AITS24P</span></p>
       </section>
 
       <!-- Controls -->
@@ -45,8 +45,10 @@
           </div>
 
           <fieldset class="days-group">
-            <legend>Days (yes = ✅, no = ❌)</legend>
+            <legend>Days (yes = ✅, no = ❌)</legend><label><input type="checkbox" name="day" value="Mon" /> Mon</label>
             <label><input type="checkbox" name="day" value="Tue" /> Tue</label>
+            <label><input type="checkbox" name="day" value="Wed" /> Wed</label>
+            <label><input type="checkbox" name="day" value="Thu" /> Thu</label>
             <label><input type="checkbox" name="day" value="Fri" /> Fri</label>
           </fieldset>
 
@@ -64,8 +66,12 @@
         <thead>
           <tr>
             <th>Course</th>
+            <th>Mon</th>
             <th>Tue</th>
+            <th>Wed</th>
+            <th>Thu</th>
             <th>Fri</th>
+
           </tr>
         </thead>
         <tbody>
