--- a/Task-h/index.html
+++ b/Task-h/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Registration Form — Tailwind Version</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="form.js" defer></script>
@@ -38,7 +38,7 @@
           </h2>
 
           <form id="registrationForm" novalidate class="space-y-3">
-            <input type="hidden" id="timestamp" name="timestamp" />
+            <input type="hidden" id="timestamp" name="timestamp"/>
 
             <div>
               <label for="fullName" class="block font-medium mb-1">Full name</label>
@@ -47,8 +47,7 @@
                 id="fullName"
                 name="fullName"
                 placeholder="First and last name"
-                class="w-full border border-slate-300 rounded-lg p-2 focus:ring-2 focus:ring-blue-500 focus:outline-none"
-              />
+                class="w-full border border-slate-300 rounded-lg p-2 focus:ring-2 focus:ring-blue-500 focus:outline-none"/>
               <p id="nameError" class="text-red-600 text-sm mt-1"></p>
             </div>
 
@@ -59,8 +58,7 @@
                 id="email"
                 name="email"
                 placeholder="example@domain.com"
-                class="w-full border border-slate-300 rounded-lg p-2 focus:ring-2 focus:ring-blue-500 focus:outline-none"
-              />
+                class="w-full border border-slate-300 rounded-lg p-2 focus:ring-2 focus:ring-blue-500 focus:outline-none"/>
               <p id="emailError" class="text-red-600 text-sm mt-1"></p>
             </div>
 
@@ -71,8 +69,7 @@
                 id="phone"
                 name="phone"
                 placeholder="+358 40 123 4567"
-                class="w-full border border-slate-300 rounded-lg p-2 focus:ring-2 focus:ring-blue-500 focus:outline-none"
-              />
+                class="w-full border border-slate-300 rounded-lg p-2 focus:ring-2 focus:ring-blue-500 focus:outline-none"/>
               <p id="phoneError" class="text-red-600 text-sm mt-1"></p>
             </div>
 
@@ -82,8 +79,7 @@
                 type="date"
                 id="birthDate"
                 name="birthDate"
-                class="w-full border border-slate-300 rounded-lg p-2 focus:ring-2 focus:ring-blue-500 focus:outline-none"
-              />
+                class="w-full border border-slate-300 rounded-lg p-2 focus:ring-2 focus:ring-blue-500 focus:outline-none"/>
               <p id="birthError" class="text-red-600 text-sm mt-1"></p>
             </div>
 
@@ -92,8 +88,7 @@
                 type="checkbox"
                 id="terms"
                 name="terms"
-                class="w-4 h-4 accent-blue-600"
-              />
+                class="w-4 h-4 accent-blue-600"/>
               <label for="terms" class="text-sm text-slate-700">
                 I accept the terms and conditions
               </label>
