--- a/Task-k/index.html
+++ b/Task-k/index.html
@@ -37,9 +37,11 @@
 
         <!-- REQUIRED IMAGE -->
         <section class="mb-16 text-center">
-            <img src="img/example.jpg" alt="Example required by assignment"
-                 class="w-full max-w-3xl mx-auto rounded-xl shadow-lg object-cover aspect-video" loading="lazy">
+            <h2 class="sr-only">Example Image Section</h2>
+            <img src="img/example.jpg" alt="Example"
+            class="w-full max-w-3xl mx-auto rounded-xl shadow-lg object-cover aspect-video" loading="lazy">
         </section>
+
 
         <!-- PRODUCT GRID -->
         <section id="products" class="mb-16 bg-[#E0F7FA] p-12 rounded-xl">
