--- a/Task-k/order.html
+++ b/Task-k/order.html
@@ -34,12 +34,11 @@
 
     <!-- FORM -->
     <section class="bg-white p-8 rounded-xl shadow">
+        <h2 class="text-3xl font-bold text-gray-800 mb-6">Customer Information</h2>
       <form action="#" method="POST" class="space-y-10">
 
         <!-- CUSTOMER INFO -->
         <fieldset class="space-y-6">
-          <legend class="text-2xl font-semibold text-gray-800 mb-4">Customer Information</legend>
-
           <div>
             <label for="fullname" class="block text-gray-700 font-medium mb-1">Full Name *</label>
             <input id="fullname" name="fullname" type="text" required
